feat: update notification
